<resources>
    <string name="app_name">QRGo</string>
    <string name="title_map">Map</string>
    <string name="title_search">Search</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="username_hint">Username</string>
    <string name="profile_filler_value">-</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="profile_static_username">Username:</string>
    <string name="profile_static_total_score">Total Score:</string>
    <string name="profile_static_total_qr_code_count">Total QR Code Count</string>
    <string name="profile_static_top_qr_code">Top QR Code:</string>
    <string name="map_search">Search Nearby</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_post">Delete Post</string>
    <string name="show_login_qrcode">Login QR Code</string>
    <string name="show_game_status_qrcode">Stats QR Code</string>
    <string name="go_back_button">Go Back</string>
    <string name="post_scanned_by_tab_name">Scanned by</string>
    <string name="post_comments_tab_name">Comments</string>
    <string name="post_post_tab_name">Post</string>
    <string name="profile_static_email">Email:</string>
    <string name="profile_static_phone">Phone:</string>
    <string name="long_comment">This is a very long comment blah blah blah. This is a very long comment blah blah blah.</string>
    <string name="username">UserName:</string>
    <string name="last_location">Last known coordinates</string>
    <string name="post_score">SCORE</string>
    <string name="post_score_value">100</string>
    <string name="scanned_by_n_users">Scanned by n users</string>
    <string name="lat_lon">[lat, lon]</string>
    <string name="add_comment_hint">add comment</string>
    <string name="no_qr_codes_photo_view">No qr codes photo</string>
    <string name="show_contact_info">Contact Info</string>
    <string name="save">Save</string>
</resources>