<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/ic_profile_24"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="1dp"
                    android:text="@string/profile_static_username"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_username"
                    android:text="@string/profile_filler_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/profile_static_total_score"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_total_score"
                    android:text="@string/profile_filler_value"
                    android:gravity="end"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/profile_static_total_qr_code_count"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_qr_code_count"
                    android:text="@string/profile_filler_value"
                    android:gravity="end"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_static_top_qr_code"
                    android:layout_marginStart="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_top_qr_code"
                    android:text="@string/profile_filler_value"
                    android:gravity="end"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scoring_qr_code_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@android:color/darker_gray"
            tools:listitem="@layout/profile_qr_code_list_item"/>
    </LinearLayout>


</LinearLayout>